chore: remove use of deprecated Google common Files API
Signed-off-by: Chris Laprun <claprun@redhat.com>